[package]
name = "physblocks"
version = "0.1.0"
authors = ["Alexander Hill <ahill@breadpudding.dev>"]
edition = "2021"
description = "Block-based physics playground"
license = "Zlib"

[dependencies]
kiss3d = "0.35.0"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
rapier3d = "=0.12.0-alpha.1"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }