[package]
name = "physblocks"
version = "0.1.0"
authors = ["Alexander Hill <ahill@breadpudding.dev>"]
edition = "2021"
description = "Block-based physics playground"
license = "Zlib"

[dependencies]
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rapier3d = "=0.22.0"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }