[package]
name = "physblocks"
version = "0.1.0"
authors = ["Alexander Hill <ahill@breadpudding.dev>"]
edition = "2021"
description = "Block-based physics playground"
license = "Zlib"

[profile.dev.package.rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rapier3d = { version = "0.23.0", features = ["enhanced-determinism"] }
ron = "0.8.1"
rhai = "1.20.1"
serde = { version = "1.0.217", features = ["derive"] }